--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+# Ignore Data folder, except the folder itself
+Data/*
+!Data/.gitkeep 
+
+
+# Stuff related to Python 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
