--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 
-# Ignore Data folder, except the folder itself
-Data/*
-!Data/.gitkeep 
+/Data
 
 
 # Stuff related to Python 
@@ -165,3 +163,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.DS_Store
+/src/.DS_Store
+/src/InceptionTime/.DS_Store
